force-app/main/default/objects/vlocity_ins__ContextScope__c/vlocity_ins__ContextScope__c.object-meta.xml
<CustomObject>
    <description>Registers a scope of context relevant to Vlocity Context Dimensions and Rules. The scope defines how to traverse the entities to access the data relevant to that scope.</description>
    <label>Context Scope</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Context Scope Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Context Scopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>