force-app/main/default/objects/vlocity_ins__ContextScope__c/fields/vlocity_ins__Entity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Entity__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>